# fluorescence

./: .gitignore  CMakeLists.txt  CompileOnLinux.md  CompileOnWindows.md  GumpActions.md  GumpThemes.md  MobileProperties.md  ProjectHome.md  XMLGumpMenus.md  credits.txt  defaultConfig.xml  deploy.sh  fluorescence.sln  fluorescence.vcxproj
src/fluorescence/: CMakeLists.txt  Makefile  client.cpp  client.hpp  main.cpp  platform.cpp  platform.hpp  typedefs.hpp
src/fluorescence/data/: CMakeLists.txt  animdataloader.cpp  animdataloader.hpp  animloader.cpp  animloader.hpp  artloader.cpp  artloader.hpp  clilocloader.cpp  clilocloader.hpp  deffileloader.hpp  defstructs.hpp  equipconvdefloader.cpp  equipconvdefloader.hpp  filepathloader.cpp  filepathloader.hpp  fixedsizeondemandfileloader.hpp  fullfileloader.cpp  fullfileloader.hpp  gumpartloader.cpp  gumpartloader.hpp  httploader.cpp  httploader.hpp  huesloader.cpp  huesloader.hpp  indexedondemandfileloader.hpp  indexloader.cpp  indexloader.hpp  manager.cpp  manager.hpp  maploader.cpp  maploader.hpp  maptexloader.cpp  maptexloader.hpp  mobtypesloader.cpp  mobtypesloader.hpp  ondemandfileloader.hpp  ondemandreadable.hpp  ondemandurlloader.hpp  radarcolloader.cpp  radarcolloader.hpp  (+17 more)
src/fluorescence/misc/: CMakeLists.txt  config.cpp  config.hpp  exception.hpp  filenamecaseconverter.cpp  filenamecaseconverter.hpp  interpolation.cpp  interpolation.hpp  log.cpp  log.hpp  patcherupdater.cpp  patcherupdater.hpp  random.cpp  random.hpp  string.cpp  string.hpp  uoconstants.hpp  variable.cpp  variable.hpp  xmlloadexception.hpp
src/fluorescence/net/: CMakeLists.txt  decompress.cpp  decompress.hpp  encryption.hpp  manager.cpp  manager.hpp  multipurposepacket.cpp  multipurposepacket.hpp  noencryption.cpp  noencryption.hpp  packet.cpp  packet.hpp  packetlist.hpp  packetreader.cpp  packetreader.hpp  packetwriter.cpp  packetwriter.hpp  socket.cpp  socket.hpp  twofishencryption.cpp  twofishencryption.hpp  walkmanager.cpp  walkmanager.hpp  walkpacketmanager.cpp  walkpacketmanager.hpp  xorencryption.cpp  xorencryption.hpp
src/fluorescence/ui/: CMakeLists.txt  animation.cpp  animation.hpp  animdatatextureprovider.cpp  animdatatextureprovider.hpp  animtextureprovider.cpp  animtextureprovider.hpp  audiomanager.cpp  audiomanager.hpp  bitmask.cpp  bitmask.hpp  cliprectmanager.cpp  cliprectmanager.hpp  commandmanager.cpp  commandmanager.hpp  componentlist.hpp  cursorimage.cpp  cursorimage.hpp  cursormanager.cpp  cursormanager.hpp  doubleclickhandler.cpp  doubleclickhandler.hpp  enums.hpp  fontengine.cpp  fontengine.hpp  gumpactions.cpp  gumpactions.hpp  gumpcomponent.cpp  gumpcomponent.hpp  gumpelement.cpp  gumpelement.hpp  gumpfactory.cpp  gumpfactory.hpp  gumpmenu.cpp  gumpmenu.hpp  gumpmenus.cpp  gumpmenus.hpp  ingameobjectrenderer.cpp  ingameobjectrenderer.hpp  ingamerenderqueue.cpp  (+23 more)
src/fluorescence/world/: CMakeLists.txt  buffinfo.hpp  dynamicitem.cpp  dynamicitem.hpp  effect.cpp  effect.hpp  ingameobject.cpp  ingameobject.hpp  ingameparticleeffect.cpp  ingameparticleeffect.hpp  lightmanager.cpp  lightmanager.hpp  manager.cpp  manager.hpp  map.cpp  map.hpp  minimapblock.cpp  minimapblock.hpp  mobile.cpp  mobile.hpp  osieffect.cpp  osieffect.hpp  overheadmessage.cpp  overheadmessage.hpp  particleeffect.cpp  particleeffect.hpp  playerwalkmanager.cpp  playerwalkmanager.hpp  sector.cpp  sector.hpp  sectormanager.cpp  sectormanager.hpp  serverobject.cpp  serverobject.hpp  smoothmovement.cpp  smoothmovement.hpp  smoothmovementmanager.cpp  smoothmovementmanager.hpp  statics.cpp  statics.hpp  (+4 more)
src/uome/: CMakeLists.txt  client.cpp  client.hpp  config.hpp  exception.hpp  logger.hpp  main.cpp  string.hpp  typedefs.hpp
src/uome/data/: CMakeLists.txt  animdataloader.cpp  animdataloader.hpp  animloader.cpp  animloader.hpp  artloader.cpp  artloader.hpp  fixedsizeondemandfileloader.hpp  fullfileloader.cpp  fullfileloader.hpp  gumpartloader.cpp  gumpartloader.hpp  huesloader.cpp  huesloader.hpp  indexblock.hpp  indexedondemandfileloader.hpp  indexloader.cpp  indexloader.hpp  manager.cpp  manager.hpp  mapblock.hpp  maploader.cpp  maploader.hpp  maptexloader.cpp  maptexloader.hpp  mobtypesloader.cpp  mobtypesloader.hpp  ondemandfileloader.hpp  ondemandreadable.hpp  staticsloader.cpp  staticsloader.hpp  tiledata.cpp  tiledata.hpp  tiledataloader.cpp  tiledataloader.hpp  util.hpp  weakptrcache.hpp
src/uome/misc/: CMakeLists.txt  config.cpp  config.hpp  configvalue.cpp  configvalue.hpp  exception.hpp  filenamecaseconverter.cpp  filenamecaseconverter.hpp  log.cpp  log.hpp  logger.cpp  logger.hpp  string.cpp  string.hpp  uoconstants.hpp  variable.cpp  variable.hpp
src/uome/net/: CMakeLists.txt  decompress.cpp  decompress.hpp  encryption.hpp  manager.cpp  manager.hpp  noencryption.cpp  noencryption.hpp  packet.cpp  packet.hpp  packetlist.hpp  packetreader.cpp  packetreader.hpp  packetwriter.cpp  packetwriter.hpp  socket.cpp  socket.hpp  twofishencryption.cpp  twofishencryption.hpp  xorencryption.cpp  xorencryption.hpp
src/uome/ui/: CMakeLists.txt  animation.cpp  animation.hpp  animdatatextureprovider.cpp  animdatatextureprovider.hpp  animtextureprovider.cpp  animtextureprovider.hpp  bitmask.cpp  bitmask.hpp  buttonclickhandler.hpp  cursorimage.cpp  cursorimage.hpp  cursormanager.cpp  cursormanager.hpp  doubleclickhandler.cpp  doubleclickhandler.hpp  gumpactions.cpp  gumpactions.hpp  gumpelement.cpp  gumpelement.hpp  gumpfactory.cpp  gumpfactory.hpp  gumpmenu.cpp  gumpmenu.hpp  gumpmenus.cpp  gumpmenus.hpp  ingameview.cpp  ingameview.hpp  ingameviewrenderer.cpp  ingameviewrenderer.hpp  ingamewindow.cpp  ingamewindow.hpp  ingamewindowrenderer.cpp  ingamewindowrenderer.hpp  manager.cpp  manager.hpp  renderer.cpp  renderer.hpp  renderqueue.cpp  renderqueue.hpp  (+7 more)
src/uome/world/: CMakeLists.txt  dynamicitem.cpp  dynamicitem.hpp  ingameobject.cpp  ingameobject.hpp  lightmanager.cpp  lightmanager.hpp  manager.cpp  map.cpp  (+13 more)
src/updater/: CMakeLists.txt  Makefile  main.cpp  platform.cpp  platform.hpp  svn.cpp  svn.hpp  svnnotify.hpp  ui.cpp  ui.hpp  updater.cpp  updater.hpp
(+699 files in other folders)
