
cmake_minimum_required (VERSION 2.8)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")

IF (NOT "${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
  set(CMAKE_BUILD_TYPE Release)
ENDIF (NOT "${CMAKE_BUILD_TYPE}" STREQUAL "Debug")



set(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}")


add_subdirectory(src)
